--- a/email-worker-compose/docker-compose.yml
+++ b/email-worker-compose/docker-compose.yml
@@ -5,8 +5,15 @@ services:
   db:
     image: postgres:9.6
     volumes: 
-      # Valume dos dados
+      # Volume dos dados
       - dados:/var/lib/postgresql/data
       # Scripts
       - ./scripts:/scripts
       - ./scripts/init.sql:/docker-entrypoint-initdb.d/init.sql
+  frontend:
+    image: nginx:1.13
+    volumes:
+      # Site
+      - ./web:/usr/share/nginx/html
+    ports:
+      - 80:80
